--- a/ZUGFeRDRenderer/test.cshtml
+++ b/ZUGFeRDRenderer/test.cshtml
@@ -1,1 +1,37 @@
-﻿
+﻿<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Invoice @Model.InvoiceNo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+    <h1>Invoice @Model.InvoiceNo</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Buyer</h5>
+                        @Model.Buyer?.Name<br />
+                        @Model.Buyer?.Street<br />
+                        @Model.Buyer?.Postcode @Model.Buyer?.City<br />
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card">                    
+                    <div class="card-body">
+                        <h5 class="card-title">Seller</h5>
+                        @Model.Seller?.Name<br />
+                        @Model.Seller?.Street<br />
+                        @Model.Seller?.Postcode @Model.Seller?.City<br />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
